--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* repeating colors as vars */
 :root {
     --light-green: #8BCB5A;
     --darker-green: #577739;
@@ -34,6 +35,11 @@ a:hover {
     padding: 2px 4px;
 }
 
+::selection {
+    color: var(--light);
+    background: var(--accent);
+}
+
 h1 {
     font-size: 2rem;
     font-weight: normal;
@@ -58,10 +64,11 @@ h1 {
     grid-template-rows: min-content auto;
 }
 
-.shadow, .main-card:hover {
-    box-shadow: 3px 3px 10px rgba(139, 203, 90, 0.5);
-    -webkit-box-shadow: 3px 3px 10px rgba(139, 203, 90, 0.5);
-    -moz-box-shadow: 3px 3px 10px rgba(139, 203, 90, 0.5);
+/* light shadow effect, primarily for header but could be used elsewhere */
+.shadow {
+    box-shadow: 3px 3px 10px rgba(139, 203, 90, 0.7);
+    -webkit-box-shadow: 3px 3px 10px rgba(139, 203, 90, 0.7);
+    -moz-box-shadow: 3px 3px 10px rgba(139, 203, 90, 0.7);
 }
 
 #header {
@@ -129,6 +136,7 @@ h1 {
     max-height: 100%;
 }
 
+/* hide the sidebar until screen is large enough */
 #sidebar {
     background-color: var(--dark);
     color: var(--light);
@@ -140,6 +148,7 @@ h1 {
     padding: 20px;
 }
 
+/* pushes the GitHub/credit to the bottom of the sidebar */
 nav {
     flex-grow: 1;
 }
@@ -159,6 +168,7 @@ nav {
     border-left: 15px solid var(--light-green);
 }
 
+/* highlight current page */
 .nav-item-selected {
     color: var(--light-green);
 }
@@ -170,7 +180,7 @@ nav {
 }
 
 .main-card {
-    height: 200px;
+    height: 170px;
     border: 2px solid var(--gray);
     border-radius: 8px;
     padding: 10px;
@@ -184,6 +194,21 @@ nav {
     box-shadow:0 8px rgba(139, 203, 90, 0.5);
     -webkit-box-shadow: 0 8px rgba(139, 203, 90, 0.5);
     -moz-box-shadow: 0 8px rgba(139, 203, 90, 0.5);
+}
+
+.main-card p {
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+
+.card-options {
+    text-align: right;
+}
+
+.card-options i {
+    margin-left: 10px;
 }
 
 /* change icon color if it becomes selected */
@@ -215,21 +240,6 @@ nav {
     opacity: 50%;
 }
 
-.main-card p {
-    display: -webkit-box;
-    -webkit-line-clamp: 4;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-}
-
-.card-options {
-    text-align: right;
-}
-
-.card-options i {
-    margin-left: 10px;
-}
-
 #announcements {
     padding: 20px;
     border: 2px solid var(--gray);
@@ -243,13 +253,16 @@ nav {
     margin-bottom: 5px;
 }
 
+/* ellipsize content that goes over 3 lines */
 .announcement p {
     display: -webkit-box;
     -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
     overflow: hidden;
+    color: var(--gray)
 }
 
+/* divider line */
 .split {
     width: 80%;
     margin: 0 auto;
@@ -287,10 +300,11 @@ nav {
     grid-area: tagline;
 }
 
+/* basic responsive design, as the screen gets larger, show the side bar */
 @media (min-width: 47rem) {
 
     #container {
-        grid-template-columns: 320px auto;
+        grid-template-columns: 280px auto;
     }
 
     #main {
@@ -306,6 +320,8 @@ nav {
     }
 }
 
+/* and once the screen is sufficiently large, show the announcements/trending
+    column on the right side instead of below */
 @media (min-width: 60rem) {
     #main {
         grid-template-columns: 4fr 1fr;
